--- a/.env
+++ b/.env
@@ -29,5 +29,7 @@ HOST=89.208.85.17:1323
 
 HOST_MINIO=89.208.85.17:9000
 
+HOST_FRONT=89.208.85.17:3001
+
 HOST_SEARCH=http://89.208.85.17:8000/search/
 HOST_TECHNOLOGIES=http://94.139.245.251:80/tech_selection/
