--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -114,6 +114,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ${{ secrets.PROJECT_PATH }}
+            rm -rf .env
             git pull origin main
             touch .env;
             echo DBHOST=${{ secrets.DBHOST }} >> .env;
