--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -56,7 +56,7 @@ jobs:
           echo HOST_MINIO=${{ secrets.HOST_MINIO }} >> .env;
           echo HOST_SEARCH=${{ secrets.HOST_SEARCH }} >> .env;
           echo HOST_TECHNOLOGIES=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
-          echo HOST_FRONT=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
+          echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
           cat .env;
           chmod 666 .env;
       - name: Set up Docker Buildx
@@ -140,7 +140,7 @@ jobs:
             echo HOST_MINIO=${{ secrets.HOST_MINIO }} >> .env;
             echo HOST_SEARCH=${{ secrets.HOST_SEARCH }} >> .env;
             echo HOST_TECHNOLOGIES=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
-            echo HOST_FRONT=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
+            echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
             cat .env;
             chmod 666 .env;
             echo "Pull new image"
