--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -53,7 +53,7 @@ jobs:
           echo SEARCH_HOST=${{ secrets.SEARCH_HOST }} >> .env;
           echo SEARCH_PORT=${{ secrets.SEARCH_PORT }} >> .env;
           echo EMAILPASSWORD=${{ secrets.EMAILPASSWORD }} >> .env;
-          echo HOST_MINIO=${{ secrets.HOST_MINIO }} >> .env;
+          echo HOST=${{ secrets.HOST }} >> .env;
           echo HOST_SEARCH=${{ secrets.HOST_SEARCH }} >> .env;
           echo HOST_TECHNOLOGIES=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
           echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
@@ -137,7 +137,7 @@ jobs:
             echo SEARCH_HOST=${{ secrets.SEARCH_HOST }} >> .env;
             echo SEARCH_PORT=${{ secrets.SEARCH_PORT }} >> .env;
             echo EMAILPASSWORD=${{ secrets.EMAILPASSWORD }} >> .env;
-            echo HOST_MINIO=${{ secrets.HOST_MINIO }} >> .env;
+            echo HOST=${{ secrets.HOST }} >> .env;
             echo HOST_SEARCH=${{ secrets.HOST_SEARCH }} >> .env;
             echo HOST_TECHNOLOGIES=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
             echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
