--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,18 +5,18 @@ server {
   location /api/v1/minio/ {
       rewrite ^/api/v1/minio/(.*)$ /$1 break;
       resolver 127.0.0.11;
-      proxy_pass http://localhost:9000/$1;
+      proxy_pass http://minio:9000/$1;
   }
 
   location /api/v1/ {
-      proxy_pass http://localhost:1323$request_uri;
+      proxy_pass http://main:1323$request_uri;
   }
 
   location /confirm/ {
-      proxy_pass http://localhost:3001$request_uri;
+      proxy_pass http://main:3001$request_uri;
   }
 
   location / {
-      proxy_pass http://localhost:3001$request_uri;
+      proxy_pass http://main:3001$request_uri;
   }
 }
