--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,22 @@
 server {
   listen 80;
-  server_name localhost;
+  server_name localhost 89.208.85.17;
 
   location /api/v1/minio/ {
       rewrite ^/api/v1/minio/(.*)$ /$1 break;
       resolver 127.0.0.11;
-      proxy_pass http://minio:9000/$1;
+      proxy_pass http://89.208.85.17:9000/$1;
   }
 
   location /api/v1/ {
-      proxy_pass http://main:1323$request_uri;
+      proxy_pass http://89.208.85.17:1323$request_uri;
   }
 
   location /confirm/ {
-      proxy_pass http://main:3001$request_uri;
+      proxy_pass http://89.208.85.17:3001$request_uri;
   }
 
   location / {
-      proxy_pass http://main:3001$request_uri;
+      proxy_pass http://89.208.85.17:3001$request_uri;
   }
 }
