--- a/.env
+++ b/.env
@@ -33,3 +33,5 @@ HOST_FRONT=localhost:3001
 
 HOST_SEARCH=http://89.208.85.17:8000/search/
 HOST_TECHNOLOGIES=http://94.139.245.251:80/tech_selection/
+HOST_RECOMMEND=http://89.208.85.17:8000/recommend/
+HOST_PROFESSIONS=http://94.139.245.251:80/job_selection/?techs=
