--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -58,6 +58,7 @@ jobs:
           echo HOST_TECHNOLOGIES=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
           echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
           echo HOST_RECOMMEND=${{ secrets.HOST_RECOMMEND }} >> .env;
+          echo HOST_PROFESSIONS=${{ secrets.HOST_PROFESSIONS }} >> .env;
           cat .env;
           chmod 666 .env;
       - name: Set up Docker Buildx
@@ -143,6 +144,7 @@ jobs:
             echo HOST_TECHNOLOGIES=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
             echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
             echo HOST_RECOMMEND=${{ secrets.HOST_RECOMMEND }} >> .env;
+            echo HOST_PROFESSIONS=${{ secrets.HOST_PROFESSIONS }} >> .env;
             cat .env;
             chmod 666 .env;
             echo "Pull new image"
