add recimmendation and fix search

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,6 +59,8 @@ jobs:
           echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
           echo HOST_RECOMMEND=${{ secrets.HOST_RECOMMEND }} >> .env;
           echo HOST_PROFESSIONS=${{ secrets.HOST_PROFESSIONS }} >> .env;
+          echo PDF_API_KEY=${{ secrets.PDF_API_KEY }} >> .env;
+          echo HOST_PROFESSIONS=${{ secrets.HOST_RESUME }} >> .env;
           cat .env;
           chmod 666 .env;
       - name: Set up Docker Buildx
@@ -145,6 +147,8 @@ jobs:
             echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
             echo HOST_RECOMMEND=${{ secrets.HOST_RECOMMEND }} >> .env;
             echo HOST_PROFESSIONS=${{ secrets.HOST_PROFESSIONS }} >> .env;
+            echo PDF_API_KEY=${{ secrets.PDF_API_KEY }} >> .env;
+            echo HOST_PROFESSIONS=${{ secrets.HOST_RESUME }} >> .env;
             cat .env;
             chmod 666 .env;
             echo "Pull new image"
