--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -60,7 +60,7 @@ jobs:
           echo HOST_RECOMMEND=${{ secrets.HOST_RECOMMEND }} >> .env;
           echo HOST_PROFESSIONS=${{ secrets.HOST_PROFESSIONS }} >> .env;
           echo PDF_API_KEY=${{ secrets.PDF_API_KEY }} >> .env;
-          echo HOST_PROFESSIONS=${{ secrets.HOST_RESUME }} >> .env;
+          echo HOST_RESUME=${{ secrets.HOST_RESUME }} >> .env;
           cat .env;
           chmod 666 .env;
       - name: Set up Docker Buildx
