add finish nodes and getting letter

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -61,6 +61,7 @@ jobs:
           echo HOST_PROFESSIONS=${{ secrets.HOST_PROFESSIONS }} >> .env;
           echo PDF_API_KEY=${{ secrets.PDF_API_KEY }} >> .env;
           echo HOST_RESUME=${{ secrets.HOST_RESUME }} >> .env;
+          echo HOST_LETTER=${{ secrets.HOST_LETTER }} >> .env;
           cat .env;
           chmod 666 .env;
       - name: Set up Docker Buildx
@@ -149,6 +150,7 @@ jobs:
             echo HOST_PROFESSIONS=${{ secrets.HOST_PROFESSIONS }} >> .env;
             echo PDF_API_KEY=${{ secrets.PDF_API_KEY }} >> .env;
             echo HOST_RESUME=${{ secrets.HOST_RESUME }} >> .env;
+            echo HOST_LETTER=${{ secrets.HOST_LETTER }} >> .env;
             cat .env;
             chmod 666 .env;
             echo "Pull new image"
