new server + nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,22 +1,49 @@
 server {
   listen 80;
-  server_name localhost 89.208.85.17;
+  server_name job-roadmap.ru 51.250.86.4;
 
   location /api/v1/minio/ {
       rewrite ^/api/v1/minio/(.*)$ /$1 break;
       resolver 127.0.0.11;
-      proxy_pass http://89.208.85.17:9000/$1;
+      proxy_pass http://51.250.86.4:9000/$1;
   }
 
   location /api/v1/ {
-      proxy_pass http://89.208.85.17:1323$request_uri;
+      proxy_pass http://main:1323$request_uri;
   }
 
   location /confirm/ {
-      proxy_pass http://89.208.85.17:3001$request_uri;
+      auth_request /conf;
+      resolver 127.0.0.11;
+      proxy_pass http://51.250.86.4:3001;
+  }
+
+  location /search/ {
+      proxy_pass http://51.250.86.4:8000$request_uri;
+  }
+
+  location /recommend/ {
+      proxy_pass http://51.250.86.4:8000$request_uri;
+  }
+
+  location /cv_analyze/ {
+      proxy_pass http://51.250.86.4:8000$request_uri;
+  }
+
+  location /api/v2/ {
+      proxy_pass http://94.139.245.251$request_uri;
+  }
+
+  location = /conf {
+  internal;
+      proxy_set_header Req $request_uri;
+      proxy_pass http://main:1323/confirm;
+      proxy_pass_request_body off;
+      proxy_set_header Content-Length "";
+      proxy_set_header X-Original-URI $request_uri;
   }
 
   location / {
-      proxy_pass http://89.208.85.17:3001$request_uri;
+      proxy_pass http://51.250.86.4:3001$request_uri;
   }
 }
