--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -119,6 +119,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd ${{ secrets.PROJECT_PATH }}
+            sudo su
             rm -rf .env
             git pull origin main
             touch .env;
@@ -154,9 +155,9 @@ jobs:
             cat .env;
             chmod 666 .env;
             echo "Pull new image"
-            sudo docker-compose -f docker-compose.yml pull
+            docker-compose -f docker-compose.yml pull
             echo "Restart the container"
-            sudo docker-compose -f docker-compose.yml up --force-recreate --build --no-deps -d
+            docker-compose -f docker-compose.yml up --force-recreate --build --no-deps -d
             echo "Delete old image"
             docker image prune -f
           
