--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -120,6 +120,7 @@ jobs:
           script: |
             cd ${{ secrets.PROJECT_PATH }}
             sudo su
+            mkdir test
             rm -rf .env
             git pull origin main
             touch .env;
