--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,9 @@
 server {
-  listen 80;
+  listen 443 http2 ssl;
   server_name job-roadmap.ru 51.250.86.4;
+
+  ssl_certificate /etc/letsencrypt/live/job-roadmap.ru/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/job-roadmap.ru/privkey.pem;
 
   location /api/v1/minio/ {
       rewrite ^/api/v1/minio/(.*)$ /$1 break;
@@ -45,5 +48,15 @@ server {
 
   location / {
       proxy_pass http://51.250.86.4:3001$request_uri;
+  }
+}
+
+server {
+  listen 80;
+  server_name job-roadmap.ru 51.250.86.4;
+
+
+  location / {
+        return 301 https://job-roadmap.ru$request_uri;
   }
 }
