--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -30,6 +30,22 @@ server {
       proxy_set_header X-Original-URI $request_uri;
   }
 
+  location /search/ {
+      proxy_pass http://51.250.86.4:8000$request_uri;
+  }
+
+  location /recommend/ {
+      proxy_pass http://51.250.86.4:8000$request_uri;
+  }
+
+  location /cv_analyze/ {
+      proxy_pass http://51.250.86.4:8000$request_uri;
+  }
+
+  location /api/v2/ {
+      proxy_pass http://94.139.245.251$request_uri;
+  }
+
   location / {
       proxy_pass http://51.250.86.4:3001$request_uri;
   }
