--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -123,35 +123,35 @@ jobs:
             sudo rm -rf .env
             sudo git pull origin main
             sudo touch .env;
-            echo DBHOST=${{ secrets.DBHOST }} >> .env;
-            echo DBPORT=${{ secrets.DBPORT }} >> .env;
-            echo DBUSER=${{ secrets.DBUSER }} >> .env;
-            echo DBPASSWORD=${{ secrets.DBPASSWORD }} >> .env;
-            echo DBNAME=${{ secrets.DBNAME }} >> .env;
-            echo REDISHOST=${{ secrets.REDISHOST }} >> .env;
-            echo REDISPORT=${{ secrets.REDISPORT }} >> .env;
-            echo REDISPROTOCOL=${{ secrets.REDISPROTOCOL }} >> .env;
-            echo MINIOURL=${{ secrets.MINIOURL }} >> .env;
-            echo MINIOUSER=${{ secrets.MINIOUSER }} >> .env;
-            echo MINIOPASSWORD=${{ secrets.MINIOPASSWORD }} >> .env;
-            echo CSRF_SECRET=${{ secrets.CSRF_SECRET }} >> .env;
-            echo AUTH_HOST=${{ secrets.AUTH_HOST }} >> .env;
-            echo AUTH_PORT=${{ secrets.AUTH_PORT }} >> .env;
-            echo HOST=${{ secrets.HOST }} >> .env;
-            echo PROFILE_HOST=${{ secrets.PROFILE_HOST }} >> .env;
-            echo PROFILE_PORT=${{ secrets.PROFILE_PORT }} >> .env;
-            echo SEARCH_HOST=${{ secrets.SEARCH_HOST }} >> .env;
-            echo SEARCH_PORT=${{ secrets.SEARCH_PORT }} >> .env;
-            echo EMAILPASSWORD=${{ secrets.EMAILPASSWORD }} >> .env;
-            echo HOST=${{ secrets.HOST }} >> .env;
-            echo HOST_SEARCH=${{ secrets.HOST_SEARCH }} >> .env;
-            echo HOST_TECHNOLOGIES=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
-            echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
-            echo HOST_RECOMMEND=${{ secrets.HOST_RECOMMEND }} >> .env;
-            echo HOST_PROFESSIONS=${{ secrets.HOST_PROFESSIONS }} >> .env;
-            echo PDF_API_KEY=${{ secrets.PDF_API_KEY }} >> .env;
-            echo HOST_RESUME=${{ secrets.HOST_RESUME }} >> .env;
-            echo HOST_LETTER=${{ secrets.HOST_LETTER }} >> .env;
+            sudo echo DBHOST=${{ secrets.DBHOST }} >> .env;
+            sudo echo DBPORT=${{ secrets.DBPORT }} >> .env;
+            sudo echo DBUSER=${{ secrets.DBUSER }} >> .env;
+            sudo echo DBPASSWORD=${{ secrets.DBPASSWORD }} >> .env;
+            sudo echo DBNAME=${{ secrets.DBNAME }} >> .env;
+            sudo echo REDISHOST=${{ secrets.REDISHOST }} >> .env;
+            sudo echo REDISPORT=${{ secrets.REDISPORT }} >> .env;
+            sudo echo REDISPROTOCOL=${{ secrets.REDISPROTOCOL }} >> .env;
+            sudo echo MINIOURL=${{ secrets.MINIOURL }} >> .env;
+            sudo echo MINIOUSER=${{ secrets.MINIOUSER }} >> .env;
+            sudo echo MINIOPASSWORD=${{ secrets.MINIOPASSWORD }} >> .env;
+            sudo echo CSRF_SECRET=${{ secrets.CSRF_SECRET }} >> .env;
+            sudo echo AUTH_HOST=${{ secrets.AUTH_HOST }} >> .env;
+            sudo echo AUTH_PORT=${{ secrets.AUTH_PORT }} >> .env;
+            sudo echo HOST=${{ secrets.HOST }} >> .env;
+            sudo echo PROFILE_HOST=${{ secrets.PROFILE_HOST }} >> .env;
+            sudo echo PROFILE_PORT=${{ secrets.PROFILE_PORT }} >> .env;
+            sudo echo SEARCH_HOST=${{ secrets.SEARCH_HOST }} >> .env;
+            sudo echo SEARCH_PORT=${{ secrets.SEARCH_PORT }} >> .env;
+            sudo echo EMAILPASSWORD=${{ secrets.EMAILPASSWORD }} >> .env;
+            sudo echo HOST=${{ secrets.HOST }} >> .env;
+            sudo echo HOST_SEARCH=${{ secrets.HOST_SEARCH }} >> .env;
+            sudo echo HOST_TECHNOLOGIES=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
+            sudo echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
+            sudo echo HOST_RECOMMEND=${{ secrets.HOST_RECOMMEND }} >> .env;
+            sudo echo HOST_PROFESSIONS=${{ secrets.HOST_PROFESSIONS }} >> .env;
+            sudo echo PDF_API_KEY=${{ secrets.PDF_API_KEY }} >> .env;
+            sudo echo HOST_RESUME=${{ secrets.HOST_RESUME }} >> .env;
+            sudo echo HOST_LETTER=${{ secrets.HOST_LETTER }} >> .env;
             cat .env;
             chmod 666 .env;
             echo "Pull new image"
