big fix without ci/cd and nginx

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -55,6 +55,7 @@ jobs:
           echo EMAILPASSWORD=${{ secrets.EMAILPASSWORD }} >> .env;
           echo HOST=${{ secrets.HOST }} >> .env;
           echo HOST_SEARCH=${{ secrets.HOST_SEARCH }} >> .env;
+          echo HOST_TECH=${{ secrets.HOST_TECH }} >> .env;
           echo HOST_TECHNOLOGIES=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
           echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
           echo HOST_RECOMMEND=${{ secrets.HOST_RECOMMEND }} >> .env;
@@ -145,6 +146,7 @@ jobs:
             echo EMAILPASSWORD=${{ secrets.EMAILPASSWORD }} >> .env;
             echo HOST=${{ secrets.HOST }} >> .env;
             echo HOST_SEARCH=${{ secrets.HOST_SEARCH }} >> .env;
+            echo HOST_TECH=${{ secrets.HOST_TECH }} >> .env;
             echo HOST_TECHNOLOGIES=${{ secrets.HOST_TECHNOLOGIES }} >> .env;
             echo HOST_FRONT=${{ secrets.HOST_FRONT }} >> .env;
             echo HOST_RECOMMEND=${{ secrets.HOST_RECOMMEND }} >> .env;
