--- a/cmd/main/Dockerfile
+++ b/cmd/main/Dockerfile
@@ -19,7 +19,7 @@ RUN CGO_ENABLED=0 go build ./cmd/main/main.go
 ## Deploy
 ##
 
-FROM alpine
+FROM ubuntu:latest
 
 WORKDIR /app
 
@@ -27,6 +27,8 @@ COPY --from=build /build/main .
 COPY --from=build /build/.env .
 
 RUN chmod +x ./main
+RUN  apt-get update
+RUN  apt -y install poppler-utils
 
 EXPOSE 1323/tcp
 
