--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,6 +5,8 @@ server {
   ssl_certificate /etc/letsencrypt/live/job-roadmap.ru/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/job-roadmap.ru/privkey.pem;
 
+  client_max_body_size 200M;
+
   location /api/v1/minio/ {
       rewrite ^/api/v1/minio/(.*)$ /$1 break;
       resolver 127.0.0.11;
@@ -15,11 +17,14 @@ server {
       proxy_pass http://main:1323$request_uri;
   }
 
-  location /confirm/ {
+  location /confirm {
       auth_request /conf;
-      resolver 127.0.0.11;
-      proxy_pass http://51.250.86.4:3001;
+      proxy_pass http://51.250.86.4/confirm/redirect;
   }
+
+  location /confirm/redirect {
+        return 301 http://job-roadmap.ru/;
+    }
 
   location = /conf {
   internal;
@@ -28,21 +33,14 @@ server {
       proxy_pass_request_body off;
       proxy_set_header Content-Length "";
       proxy_set_header X-Original-URI $request_uri;
+      proxy_intercept_errors on;
   }
 
-  location /search/ {
+  location /api/v3 {
       proxy_pass http://51.250.86.4:8000$request_uri;
   }
 
-  location /recommend/ {
-      proxy_pass http://51.250.86.4:8000$request_uri;
-  }
-
-  location /cv_analyze/ {
-      proxy_pass http://51.250.86.4:8000$request_uri;
-  }
-
-  location /api/v2/ {
+  location /api/v2 {
       proxy_pass http://94.139.245.251$request_uri;
   }
 
@@ -55,7 +53,10 @@ server {
   listen 80;
   server_name job-roadmap.ru 51.250.86.4;
 
+  client_max_body_size 200M;
+
   location / {
-      return 301 https://job-roadmap.ru$request_uri;
+      proxy_request_buffering off;
+      return 307 https://job-roadmap.ru$request_uri;
   }
 }
