--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     ports:
       - "5432:5432"
   redis:
-    image: redis:latest
-    command: [ sh, -c, "rm -f /data/dump.rdb && redis-server --save ''" ]
+    image: redis:alpine
+    command: redis-server --appendonly yes --replica-read-only no
     restart: always
     ports:
       - "6379:6379"
